# dick

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/plans/: vpn_telegram_bot_refined.plan.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20260410_0001_initial.py
app/: __init__.py  main.py
app/bot/: factory.py  middlewares.py  notify.py  states.py  texts_ru.py
app/core/: config.py  logging.py
app/db/: __init__.py  session.py
app/handlers/: admin.py  user.py
app/integrations/three_x_ui/: __init__.py  client.py  errors.py  matching.py  protocol.py  vless_link.py
app/keyboards/: __init__.py  admin.py  admin_kb.py  admin_reply_kb.py  user_kb.py
app/models/: __init__.py  admin_action.py  audit_log.py  import_binding.py  pending_notification.py  regeneration.py  second_key_request.py  user.py  vpn_key.py
app/repositories/: __init__.py  audit.py  pending_notification.py  second_key_request.py  user.py  vpn_key.py
app/services/: __init__.py  container.py  key_service.py  rate_limit.py  user_service.py
app/utils/: masking.py
deploy/: vpn-bot.service
docker/: entrypoint.sh
scripts/: run.sh
