[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "vpn-telegram-bot"
version = "0.1.0"
description = "Telegram bot for VPN access management with 3x-ui"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13,<4",
  "psycopg2-binary>=2.9",
  "SQLAlchemy[asyncio]>=2.0.36,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.14,<2",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.6,<3",
  "structlog>=24.4,<26",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
